--- a/template/gemspec.mustache
+++ b/template/gemspec.mustache
@@ -13,7 +13,7 @@ Gem::Specification.new do |s|
   s.platform    = Gem::Platform::RUBY
   s.authors     = ["PhoenixNAP"]
   s.email       = ["{{gemAuthorEmail}}{{^gemAuthorEmail}}{{infoEmail}}{{/gemAuthorEmail}}"]
-  s.homepage    = "https://phoenixnap.com/"
+  s.homepage    = "https://phoenixnap.com/bare-metal-cloud"
   s.summary     = "{{gemSummary}}{{^gemSummary}}{{{appName}}} Ruby Gem{{/gemSummary}}"
   s.description = "{{gemSummary}}{{^gemSummary}}{{{appName}}} Ruby Gem{{/gemSummary}}"
   s.license     = "{{{gemLicense}}}{{^gemLicense}}Unlicense{{/gemLicense}}"
