--- a/template/gemspec.mustache
+++ b/template/gemspec.mustache
@@ -18,7 +18,7 @@ Gem::Specification.new do |s|
   s.description = "{{gemSummary}}{{^gemSummary}}{{{appName}}} Ruby Gem{{/gemSummary}}"
   s.license     = "{{{gemLicense}}}{{^gemLicense}}Unlicense{{/gemLicense}}"
   s.required_ruby_version = "{{{gemRequiredRubyVersion}}}{{^gemRequiredRubyVersion}}>= 2.7{{/gemRequiredRubyVersion}}"
-  s.metadata    = {{{gemMetadata}}}{{^gemMetadata}}{}{{/gemMetadata}}
+  s.metadata    = { "source_code_uri" => "https://github.com/phoenixnap/ruby-sdk-bmc" }
 
   {{#isFaraday}}
   s.add_runtime_dependency 'faraday', '>= 1.0.1', '< 3.0'
