Attempting billing fix

--- a/template/api_client.mustache
+++ b/template/api_client.mustache
@@ -34,6 +34,7 @@ module {{moduleName}}
     # @option config [Configuration] Configuration for initializing the object, default to Configuration.default
     def initialize(config = Configuration.default)
       @config = config
+      @config.params_encoding = :multi
       @user_agent = "PNAP-ruby-sdk-bmc/#{ {{moduleName}}::VERSION }"
       @powered_by = "PNAP-ruby-sdk-bmc/#{ {{moduleName}}::VERSION }"
       @default_headers = {
