added module name

--- a/template/api_client.mustache
+++ b/template/api_client.mustache
@@ -35,8 +35,8 @@ module {{moduleName}}
     def initialize(config = Configuration.default)
       @config = config
       @config.params_encoding = :multi
-      @user_agent = "PNAP-ruby-sdk-bmc/#{ {{moduleName}}::VERSION }"
-      @powered_by = "PNAP-ruby-sdk-bmc/#{ {{moduleName}}::VERSION }"
+      @user_agent = "PNAP-ruby-sdk-bmc/{{moduleName}}/#{ {{moduleName}}::VERSION }"
+      @powered_by = "PNAP-ruby-sdk-bmc/{{moduleName}}/#{ {{moduleName}}::VERSION }"
       @default_headers = {
         'Content-Type' => 'application/json',
         'User-Agent' => @user_agent,
